versao com SeekableByteChannel. Calculando pages ok